# cython_test

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
xpdfpghljk/: hello.c  hello.pyx
