[project]
name = "xpdfpghljk"
version = "0.4.0"

[project.scripts]
cython_test = "xpdfpghljk.hello:hello_world"

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools", "cython"]

[tool.cibuildwheel]
archs = ["native"]
build = "cp38-*"

[tool.setuptools]
packages = ["xpdfpghljk"]
